fixed z-index error of settings modal

--- a/src/components/Utils/Modal/Modal.styles.scss
+++ b/src/components/Utils/Modal/Modal.styles.scss
@@ -17,6 +17,7 @@
 .modal-container {
   position: fixed;
   inset: 0;
+  z-index: 999999999;
   overflow: auto;
   background-color: hsl(0, 0%, 30%, 0.9);
 
